Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
 <body>
   <div class="wrap" id="scene">
     <div class="card">
-      <h1 class="title">Ana, você pode me passar seu telefone? 💬</h1>
-      <p class="subtitle">Prometo mandar bom dia todo dia . ☕💖</p>
+      <h1 class="title">Patricia,voce gostaria de sair pra jantar comigo ? ? 💬</h1>
+      <p class="subtitle">Prometo que nao vai se arrepender  . ☕💖</p>
       <div class="buttons">
         <button class="btn-sim" id="btn-sim">Sim 😄</button>
         <!-- o botão NÃO começa dentro do card, mas será reposicionado pela página -->
@@ -277,7 +277,7 @@
     btnSim.addEventListener('click', () => {
       shootConfetti();
       // abre o link do WhatsApp em nova aba
-      const waLink = 'https://wa.me/5564993419602';
+      const waLink = 'https://wa.me/5564992372167';
       // pequena pausa pra mostrar o confete antes de abrir
       setTimeout(() => window.open(waLink, '_blank'), 600);
     });
